core/static/css/v2/pages/home/home-page.less
/* ... */
#mainnav {
  margin: 0;
}

#myCarousel-1 {
  margin-bottom: 60px;
  .item {
    img {
     width: 100%;
    }
    transition-duration: 1.5s;
    transition-property: transform;
    transition-timing-function: linear;

    & > .floating-container {
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        margin: auto;
        z-index: 1;

        .relative-container {
          position: relative;
          height: 100%;
          display: flex;
          align-items: center;
          // justify-content: center; //horozontally center

          & > .floating-content {
            // background: rgba(0, 0, 0, 0.7);
          }
        }

    }

    .item-container {
      .link-to-page {
        border-top: 1px solid @bg-light;
        border-bottom: 1px solid @bg-light;
        padding: 14px;
      }
      .margin-left {
        margin-left: 10px;
      }
      div:first-child {
        margin: 0px auto;
        text-align: center;
        span {
          background: @bg-light;
          padding: 2px 10px;
          letter-spacing: 2px;
        }
        + h1 {
          .font-size(35);
          color: @text-light;
          padding: 40px 0;
          max-width: 320px;
          margin: 0;
          text-align: center;

          + div {
            text-align: center;
            a {
              padding: 15px 20px;
              .font-size(16);
              color: @text-light;
              &:hover {
                color: @primary-color;
              }
            }
          }
        }
      }
    }
  }
  .carousel-control-container {
    border: 1px solid @lighter-grey;
    height: 40px;
    width: 90px;
    position: absolute;
    top: 80%;
  }
  .carousel-control {
    &.left, &.right {
      background: none;
      width: 44px;
      color: @lighter-grey;
      opacity: 1;
      background: @bg-lighter-transparent;
      &:hover {
        opacity: 0.6;
      }
      i {
        .font-size(34);
      }
    }
    &.right {
      border-left: 1px solid @bg-light;
    }
  }
}

#myCarousel-2 {
  margin-bottom: 60px;
  .carousel-title {
    h4 {
      color: @primary-color;
      margin-bottom: 20px;
    }
  }
  .carousel-control-container {
    border: 1px solid @light-grey;
    height: 40px;
    width: 90px;
    position: absolute;
    bottom: 0;
    left: 0;
  }
  .carousel-control {
    &.left, &.right {
      background: none;
      width: 44px;
      color: @light-grey;
      opacity: 1;
      background: @bg-lighter-transparent;
      text-shadow: none;
      &:hover {
        opacity: 0.6;
      }
      i {
        .font-size(34);
      }
    }
    &.right {
      border-left: 1px solid @light-grey;
    }
  }
  .gallery-tile {
    margin-bottom: 0;
    .name-primary {
      padding-bottom: 20px;
    }
    img {
      max-height: 80%;
      max-width: 100%;
    }
    .gallery-tile-info {
      .desc-module {
        margin: 0 0 1em 0;
        overflow: hidden;
      }
      .desc-module p {
        margin: 0;
      }
      .line-clamp {
        display: -webkit-box;
        -webkit-line-clamp: 8;
        -webkit-box-orient: vertical;
      }
      .date {
        .dot-seperator {
          padding: 0px 5px 2px 5px;
          font-weight: 800;
          color: @text-title-light;
        }
        a {
          &:hover {
            color: @primary-color;
          }
          color: @text-title-light;
          font-weight: 300;
          font-size: 1em;
          letter-spacing: 1px;
        }
      }
      min-height: auto;
      h2 {
        margin-top: 0;
        .font-size(36);
        line-height: 35px;
      }
      p {
        .font-size(16);
        line-height: inherit;
        font-size: 1.3333333333333333rem;
        margin-bottom: 15px;
      }
      .name-primary {
        .font-size(16);
        + a {
          .font-size(16);
          color: @grey;
          padding-bottom: 40px;
        }
      }
    }
  }
  .carousel-inner {
    .view-all {
      margin-top: 20px;
      text-align: left;
      margin-bottom: 45px;
      padding-top: 15px;
      a {
        span {
          margin: 0;
          padding: 0;
        }
      }
    }
  }
  .carousel-control-container {
    margin-left: 0;
  }
}

.home-article-grid-1 {
  background: @lighter-grey;
  padding: 40px 0 20px 0;
  margin-bottom: 60px;
  .date {
    .dot-seperator {
      margin: 5px;
    }
    a {
      color: @grey;
      margin-right: 0;
      padding-bottom: 10px;
      &:hover {
        color: @primary-color;
      }
    }
  }
  .dropdown {
    button {
      border-radius: 0;
      border-style: solid;
      background-color: @lighter-grey;
      border-width: 1px;
      border-color: lightgrey;
      color: @grey;
      margin-top: 26px;
      margin-bottom: 10px;
      padding: 7px;
    }
  }

  .open > .dropdown-menu {
    display: block;
    min-width: 89px;
    text-align: center;
    border-radius: 0;
    color: @grey;
  }
  .tags-label {
    background: white;
  }
  .grid {
    .name-primary {
      :hover {
          color: @primary-color;
        }
    }
    .infocus-title-primary  {
        &:hover {
          color: #444444;
        }
    }
    .author-name{
      font-size: 16px;
    }
    .location-name{
          font-size: 12px;
    }
    .date-infocus{
      font-size: 12px;
    }
    margin-bottom: 0;
    img {
    }
  }

  .link-dark {
    &:hover {
      color: @primary-color;
    }
    color: @darker-grey;
    .font-size(14);
  }
}
/* ... */

